fix spacing and format to match original syntax

--- a/style.css
+++ b/style.css
@@ -1,19 +1,9 @@
 
-▼
-▼
-▼
-▼
-▼
-▼
-▼
-▼
-
 @import url(https://fonts.googleapis.com/css?family=Open+Sans:400italic,400);
 
 body {
 font: normal normal 13px/16px "Open Sans", sans-serif;
-background: 
-#dfdfdf;
+background: #dfdfdf;
 }
 
 .container{
@@ -21,8 +11,7 @@ padding: 20px;
 width: 300px;
 margin: 0 auto;
 margin-top: 40px;
-background: 
-white;
+background: white;
 border-radius: 5px;}
 
 form {
@@ -35,10 +24,8 @@ padding: 4px 15px 4px 5px;
 
 #button{
 display: inline-block;
-background-color:
-#fc999b;
-color:
-#ffffff;
+background-color:#fc999b;
+color:#ffffff;
 border-radius: 5px;
 text-align:center;
 margin-top:2px;
@@ -51,11 +38,9 @@ opacity: .8;}
 
 ol {padding-left: 20px;}
 
-ol li {padding: 5px;color:
-#000;}
+ol li {padding: 5px;color:#000;}
 
-ol li:nth-child(even){background: 
-#dfdfdf;}
+ol li:nth-child(even){background: #dfdfdf;}
 
 .strike{text-decoration: line-through;}
 
@@ -71,7 +56,6 @@ li > crossOutButton {
 	background: none;
 	border: none;
 	float: right;
-	color: 
-#025f70;
+	color: #025f70;
 	font-weight: 800;
 }
